# gol-rs

./: .gitignore  Cargo.toml  shell.nix
src/: lib.rs  main.rs
src/game_of_life/: api_types.rs  game_of_life_grid.rs  mod.rs
src/gui/: builder.glade  mod.rs
