[package]
name = "kata"
version = "0.1.0"
authors = ["FaustXVI <xavier.detant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.8.1"
glib = "0.9.3"
itertools = "0.9.0"
rand = "0.7.3"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

